--- a/css/style.css
+++ b/css/style.css
@@ -2875,11 +2875,6 @@ ul {
   position: relative;
 }
 
-/* line 74, E:/170 Kanox Agency/170_Kanox_Agency_html/sass/_banner.scss */
-.banner_part .banner_bg img {
-  margin-left: -15%;
-}
-
 @media (max-width: 576px) {
   /* line 74, E:/170 Kanox Agency/170_Kanox_Agency_html/sass/_banner.scss */
   .banner_part .banner_bg img {
@@ -7791,7 +7786,7 @@ h1, h2, h3, h4, h5, h6 {
 /* line 2, E:/170 Kanox Agency/170_Kanox_Agency_html/sass/_footer.scss */
 .footer-area {
   background-color: #162b45;
-  padding: 100px 0px 20px;
+  padding: 15px 0px 20px;
 }
 
 @media (max-width: 991px) {
@@ -8060,8 +8055,6 @@ h1, h2, h3, h4, h5, h6 {
 /* line 195, E:/170 Kanox Agency/170_Kanox_Agency_html/sass/_footer.scss */
 .footer-area .copyright_part_text {
   border-top: 1px solid #45556a;
-  padding-top: 20px;
-  margin-top: 95px;
 }
 
 /* line 199, E:/170 Kanox Agency/170_Kanox_Agency_html/sass/_footer.scss */
@@ -8177,9 +8170,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .unseen {
-    position: absolute;
-    right: 100px;
+position: absolute;
+    right: 210px;
     width: 130px;
-    bottom: 30px;
+    bottom: 17px;
     height: 30px;
+    margin: 0;
+    padding: 0;
+}
+.banner_img{
+    margin-left: -21% !important;
+    width: 80%;
+}
+.fa-app-store-ios{
+    font-size: 20px;
+}
+.fa-android{
+    font-size: 20px;
 }
